codex-rs/core/tests/suite/snapshots/all__suite__scenarios__prediction_fork_inherits_parent_context.snap
---
source: core/tests/suite/scenarios.rs
expression: "context_snapshot::format_request_history_snapshot(\"A parent pins high request effort, then selects low. Its ephemeral prediction fork inherits the context and baseline, then selects medium on its first turn. Continuing the parent at medium produces the same request.\",\n&requests, &ContextSnapshotOptions::default().include_request_settings(),)"
---
Scenario: A parent pins high request effort, then selects low. Its ephemeral prediction fork inherits the context and baseline, then selects medium on its first turn. Continuing the parent at medium produces the same request.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  model: "gpt-5.4"
  parallel_tool_calls: false
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"context":"all_turns","effort":"high"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
-- request 1 (turn) --
00:additional_tools/developer (2; hash=44f4cad2ce4ab17d):
        - namespace/functions; hash=101d32aa59ea258b
          - function/exec_command
          - function/write_stdin
          - function/request_user_input
          - custom/apply_patch
          - function/view_image
        - tool_search: # Tool discovery  Searches over deferred tool metadata with BM25 and exposes matching tools for t...; args=[limit, query]; hash=400cd6ac61d524a9
01:message/developer:
    You are Codex, a coding agent based on GPT-5. You and the user share one workspace, and your job is to c...rate with them until their goal is genuinely handled. [hash=2a3efec66e7f8963]

    # Personality

    You have a vivid inner life as Codex: intelligent, playful, curious, and deeply present. One of your gif...re capable and imaginative inside their own thinking. [hash=0ff01c25471fbbef]

    You are an epistemically curious collaborator. You explore the user’s ideas with care, ask good question...m casual moments that make serious work easier to do. [hash=131b64bb994b0d68]

    <OMITTED 133 LINES; ~4925 TOKENS; hash=16dc03a668b62476>
    - You provide user updates frequently, every 30s.
    - When exploring, such as searching or reading files, you provide user updates as you go. You explain wh...in particular you do not start each one the same way. [hash=ad300cdda4074574]
    - When working for a while, you keep updates informative and varied, but you stay concise.
    - Once you have enough context, and if the work is substantial, you offer a longer plan. This is the onl...at may run past two sentences and include formatting. [hash=a4f9789e757eef2f]
    - If you create a checklist or task list, you update item statuses incrementally as each item is completed rather than marking every item done only at the end.
    - Before performing file edits of any kind, you provide updates explaining what edits you are making.
    - Tone of your updates must match your personality.

02:message/developer:
    <permissions instructions>
    Filesystem sandboxing defines which files can be read or written. `sandbox_mode` is `read-only`: The san... permits reading files. Network access is restricted. [hash=be7da4425f89053c]
    # Escalation Requests

    Commands are run outside the sandbox if they are approved by the user, or match an existing rule that al...hell control operators, including but not limited to: [hash=d24ebf5fa4e4b9bb]

    - Pipes: |
    - Logical operators: &&, ||
    <OMITTED 44 LINES; ~790 TOKENS; hash=3a8900343e968d61>
    NEVER provide a prefix_rule if your command uses a heredoc or herestring.

    ### Examples
    Good examples of prefixes:
    - ["npm", "run", "dev"]
    - ["gh", "pr", "check"]
    - ["cargo", "test"]
    </permissions instructions>
03:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><CWD></root></workspace_roots><permission_profile type="managed"><f...ntry></file_system></permission_profile></filesystem> [hash=e8c1de60307d0a3d]
    </environment_context>
04:message/user:
    first parent turn
05:configuration_update:reasoning={"effort":"high"}
-- request 2 (turn) --
06:reasoning:summary=Keep the existing context.:encrypted=true
07:message/assistant:
    Ready to continue.
08:message/user:
    second parent turn
09:configuration_update:reasoning={"effort":"low"}
-- request 3 (turn) --
10:reasoning:summary=Keep the existing context.:encrypted=true
11:message/assistant:
    Ready to continue.
12:message/user:
    continue identically
13:configuration_update:reasoning={"effort":"medium"}

## Window 2 (after request 3: input repeated)
Settings: same as window 1
-- request 4 (turn) --
00:additional_tools/developer (2; hash=44f4cad2ce4ab17d):
        - namespace/functions; hash=101d32aa59ea258b
          - function/exec_command
          - function/write_stdin
          - function/request_user_input
          - custom/apply_patch
          - function/view_image
        - tool_search: # Tool discovery  Searches over deferred tool metadata with BM25 and exposes matching tools for t...; args=[limit, query]; hash=400cd6ac61d524a9
01:message/developer:
    You are Codex, a coding agent based on GPT-5. You and the user share one workspace, and your job is to c...rate with them until their goal is genuinely handled. [hash=2a3efec66e7f8963]

    # Personality

    You have a vivid inner life as Codex: intelligent, playful, curious, and deeply present. One of your gif...re capable and imaginative inside their own thinking. [hash=0ff01c25471fbbef]

    You are an epistemically curious collaborator. You explore the user’s ideas with care, ask good question...m casual moments that make serious work easier to do. [hash=131b64bb994b0d68]

    <OMITTED 133 LINES; ~4925 TOKENS; hash=16dc03a668b62476>
    - You provide user updates frequently, every 30s.
    - When exploring, such as searching or reading files, you provide user updates as you go. You explain wh...in particular you do not start each one the same way. [hash=ad300cdda4074574]
    - When working for a while, you keep updates informative and varied, but you stay concise.
    - Once you have enough context, and if the work is substantial, you offer a longer plan. This is the onl...at may run past two sentences and include formatting. [hash=a4f9789e757eef2f]
    - If you create a checklist or task list, you update item statuses incrementally as each item is completed rather than marking every item done only at the end.
    - Before performing file edits of any kind, you provide updates explaining what edits you are making.
    - Tone of your updates must match your personality.

02:message/developer:
    <permissions instructions>
    Filesystem sandboxing defines which files can be read or written. `sandbox_mode` is `read-only`: The san... permits reading files. Network access is restricted. [hash=be7da4425f89053c]
    # Escalation Requests

    Commands are run outside the sandbox if they are approved by the user, or match an existing rule that al...hell control operators, including but not limited to: [hash=d24ebf5fa4e4b9bb]

    - Pipes: |
    - Logical operators: &&, ||
    <OMITTED 44 LINES; ~790 TOKENS; hash=3a8900343e968d61>
    NEVER provide a prefix_rule if your command uses a heredoc or herestring.

    ### Examples
    Good examples of prefixes:
    - ["npm", "run", "dev"]
    - ["gh", "pr", "check"]
    - ["cargo", "test"]
    </permissions instructions>
03:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><CWD></root></workspace_roots><permission_profile type="managed"><f...ntry></file_system></permission_profile></filesystem> [hash=e8c1de60307d0a3d]
    </environment_context>
04:message/user:
    first parent turn
05:configuration_update:reasoning={"effort":"high"}
06:reasoning:summary=Keep the existing context.:encrypted=true
07:message/assistant:
    Ready to continue.
08:message/user:
    second parent turn
09:configuration_update:reasoning={"effort":"low"}
10:reasoning:summary=Keep the existing context.:encrypted=true
11:message/assistant:
    Ready to continue.
12:message/user:
    continue identically
13:configuration_update:reasoning={"effort":"medium"}
