codex-rs/core/tests/suite/snapshots/all__suite__scenarios__realtime_attachment_replacement.snap
---
source: core/tests/suite/scenarios.rs
assertion_line: 373
expression: "context_snapshot::format_request_history_snapshot(\"A replacement fences an older pending connection and stale stops; only the selected call starts a Codex handoff.\",\n&requests, &ContextSnapshotOptions::default().rewrite_known_segments(),)"
---
Scenario: A replacement fences an older pending connection and stale stops; only the selected call starts a Codex handoff.

## Window 1
-- request 1 (turn) --
00:message/developer[2]:
    [01] <realtime_conversation>
        Realtime conversation started.

        You are operating as a backend executor behind an intermediary. The user does not talk to you directly. ...ediary and may be summarized before the user sees it. [hash=5114d16b52865327]

        When invoked, you receive the latest conversation transcript and any relevant mode or metadata. The inte...void verbose responses that add user-visible latency. [hash=e229c6c9120dff28]

        When user text is routed from realtime, treat it as a transcript. It may be unpunctuated or contain recognition errors.

        - Keep responses concise and action-oriented. Your updates should help the intermediary respond to the user.
        </realtime_conversation>
    [02] <PERMISSIONS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    <realtime_delegation>
      <input>selected connection handoff</input>
      <transcript_delta>user: selected connection handoff</transcript_delta>
    </realtime_delegation>
