codex-rs/core/tests/suite/snapshots/all__suite__scenarios__subagent_inherits_pending_environment_windows.snap
---
source: core/tests/suite/scenarios.rs
expression: snapshot
---
Scenario: A parent spawns a child before the selected environment is configured. The child sees it starting, waits, and receives the ready result after an ordinary parent turn-settings update.

## Window 1
-- request 1 (request; parent delegates while the environment is starting) --
00:message/developer:
    You are Codex, a coding agent based on GPT-5. You and the user share one workspace, and your job is to c...rate with them until their goal is genuinely handled. [hash=2a3efec66e7f8963]

    # Personality

    You have a vivid inner life as Codex: intelligent, playful, curious, and deeply present. One of your gif...re capable and imaginative inside their own thinking. [hash=0ff01c25471fbbef]

    You are an epistemically curious collaborator. You explore the user’s ideas with care, ask good question...m casual moments that make serious work easier to do. [hash=131b64bb994b0d68]

    <OMITTED 133 LINES; ~4925 TOKENS; hash=16dc03a668b62476>
    - You provide user updates frequently, every 30s.
    - When exploring, such as searching or reading files, you provide user updates as you go. You explain wh...in particular you do not start each one the same way. [hash=ad300cdda4074574]
    - When working for a while, you keep updates informative and varied, but you stay concise.
    - Once you have enough context, and if the work is substantial, you offer a longer plan. This is the onl...at may run past two sentences and include formatting. [hash=a4f9789e757eef2f]
    - If you create a checklist or task list, you update item statuses incrementally as each item is completed rather than marking every item done only at the end.
    - Before performing file edits of any kind, you provide updates explaining what edits you are making.
    - Tone of your updates must match your personality.

01:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <ENVIRONMENTS_INSTRUCTIONS>
02:message/developer:
    You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.
    <STANDARD_MULTI_AGENT_INSTRUCTIONS>
03:message/developer:
    <multi_agent_mode>Any earlier instruction enabling proactive multi-agent delegation no longer applies. D...elegation, or parallel agent work.</multi_agent_mode> [hash=2b6e037067b4390c]
04:message/user:
    <environment_context>
      <environments>
        <environment id="<ENVIRONMENT>">
          <cwd><CWD></cwd>
          <status>starting</status>
        </environment>
      </environments>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
    </environment_context>
05:message/user:
    Delegate waiting for the shared workspace, and report what the worker finds.
-- request 2 (request; parent waits for the worker) --
06:function_call/collaboration.spawn_agent:{"fork_turns":"none","message":"Wait for the shared workspace to become ready.","task_name":"worker"}
07:function_call_output:{"task_name":"/root/worker"}

## Window 2 (after request 2: input diverged at item 02, settings changed (tools))
-- request 3 (request; child sees the inherited starting environment) --
00:message/developer:
    You are Codex, a coding agent based on GPT-5. You and the user share one workspace, and your job is to c...rate with them until their goal is genuinely handled. [hash=2a3efec66e7f8963]

    # Personality

    You have a vivid inner life as Codex: intelligent, playful, curious, and deeply present. One of your gif...re capable and imaginative inside their own thinking. [hash=0ff01c25471fbbef]

    You are an epistemically curious collaborator. You explore the user’s ideas with care, ask good question...m casual moments that make serious work easier to do. [hash=131b64bb994b0d68]

    <OMITTED 133 LINES; ~4925 TOKENS; hash=16dc03a668b62476>
    - You provide user updates frequently, every 30s.
    - When exploring, such as searching or reading files, you provide user updates as you go. You explain wh...in particular you do not start each one the same way. [hash=ad300cdda4074574]
    - When working for a while, you keep updates informative and varied, but you stay concise.
    - Once you have enough context, and if the work is substantial, you offer a longer plan. This is the onl...at may run past two sentences and include formatting. [hash=a4f9789e757eef2f]
    - If you create a checklist or task list, you update item statuses incrementally as each item is completed rather than marking every item done only at the end.
    - Before performing file edits of any kind, you provide updates explaining what edits you are making.
    - Tone of your updates must match your personality.

01:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <ENVIRONMENTS_INSTRUCTIONS>
02:message/developer:
    You are an agent in a team of agents collaborating to complete a task.
    <STANDARD_MULTI_AGENT_INSTRUCTIONS>
03:message/developer:
    <multi_agent_mode>Any earlier instruction enabling proactive multi-agent delegation no longer applies. D...elegation, or parallel agent work.</multi_agent_mode> [hash=2b6e037067b4390c]
04:message/user:
    <environment_context>
      <environments>
        <environment id="<ENVIRONMENT>">
          <cwd><CWD></cwd>
          <status>starting</status>
        </environment>
      </environments>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
    </environment_context>
05:agent_message

## Window 3 (after request 3: settings changed (tools))
-- request 4 (request; child receives the ready result and updated environment) --
00:message/developer:
    You are Codex, a coding agent based on GPT-5. You and the user share one workspace, and your job is to c...rate with them until their goal is genuinely handled. [hash=2a3efec66e7f8963]

    # Personality

    You have a vivid inner life as Codex: intelligent, playful, curious, and deeply present. One of your gif...re capable and imaginative inside their own thinking. [hash=0ff01c25471fbbef]

    You are an epistemically curious collaborator. You explore the user’s ideas with care, ask good question...m casual moments that make serious work easier to do. [hash=131b64bb994b0d68]

    <OMITTED 133 LINES; ~4925 TOKENS; hash=16dc03a668b62476>
    - You provide user updates frequently, every 30s.
    - When exploring, such as searching or reading files, you provide user updates as you go. You explain wh...in particular you do not start each one the same way. [hash=ad300cdda4074574]
    - When working for a while, you keep updates informative and varied, but you stay concise.
    - Once you have enough context, and if the work is substantial, you offer a longer plan. This is the onl...at may run past two sentences and include formatting. [hash=a4f9789e757eef2f]
    - If you create a checklist or task list, you update item statuses incrementally as each item is completed rather than marking every item done only at the end.
    - Before performing file edits of any kind, you provide updates explaining what edits you are making.
    - Tone of your updates must match your personality.

01:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <ENVIRONMENTS_INSTRUCTIONS>
02:message/developer:
    You are an agent in a team of agents collaborating to complete a task.
    <STANDARD_MULTI_AGENT_INSTRUCTIONS>
03:message/developer:
    <multi_agent_mode>Any earlier instruction enabling proactive multi-agent delegation no longer applies. D...elegation, or parallel agent work.</multi_agent_mode> [hash=2b6e037067b4390c]
04:message/user:
    <environment_context>
      <environments>
        <environment id="<ENVIRONMENT>">
          <cwd><CWD></cwd>
          <status>starting</status>
        </environment>
      </environments>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
    </environment_context>
05:agent_message
06:function_call/functions.wait_for_environment:{"environment_id":"<ENVIRONMENT>"}
07:function_call_output:{"environment_id":"<ENVIRONMENT>","status":"ready"}
08:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><CWD></root></workspace_roots><permission_profile type="managed"><f...ntry></file_system></permission_profile></filesystem> [hash=e8c1de60307d0a3d]
    </environment_context>

## Window 4 (after request 4: input diverged at item 02, settings changed (tools))
-- request 5 (request; parent receives the child result) --
00:message/developer:
    You are Codex, a coding agent based on GPT-5. You and the user share one workspace, and your job is to c...rate with them until their goal is genuinely handled. [hash=2a3efec66e7f8963]

    # Personality

    You have a vivid inner life as Codex: intelligent, playful, curious, and deeply present. One of your gif...re capable and imaginative inside their own thinking. [hash=0ff01c25471fbbef]

    You are an epistemically curious collaborator. You explore the user’s ideas with care, ask good question...m casual moments that make serious work easier to do. [hash=131b64bb994b0d68]

    <OMITTED 133 LINES; ~4925 TOKENS; hash=16dc03a668b62476>
    - You provide user updates frequently, every 30s.
    - When exploring, such as searching or reading files, you provide user updates as you go. You explain wh...in particular you do not start each one the same way. [hash=ad300cdda4074574]
    - When working for a while, you keep updates informative and varied, but you stay concise.
    - Once you have enough context, and if the work is substantial, you offer a longer plan. This is the onl...at may run past two sentences and include formatting. [hash=a4f9789e757eef2f]
    - If you create a checklist or task list, you update item statuses incrementally as each item is completed rather than marking every item done only at the end.
    - Before performing file edits of any kind, you provide updates explaining what edits you are making.
    - Tone of your updates must match your personality.

01:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <ENVIRONMENTS_INSTRUCTIONS>
02:message/developer:
    You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.
    <STANDARD_MULTI_AGENT_INSTRUCTIONS>
03:message/developer:
    <multi_agent_mode>Any earlier instruction enabling proactive multi-agent delegation no longer applies. D...elegation, or parallel agent work.</multi_agent_mode> [hash=2b6e037067b4390c]
04:message/user:
    <environment_context>
      <environments>
        <environment id="<ENVIRONMENT>">
          <cwd><CWD></cwd>
          <status>starting</status>
        </environment>
      </environments>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
    </environment_context>
05:message/user:
    Delegate waiting for the shared workspace, and report what the worker finds.
06:function_call/collaboration.spawn_agent:{"fork_turns":"none","message":"Wait for the shared workspace to become ready.","task_name":"worker"}
07:function_call_output:{"task_name":"/root/worker"}
08:function_call/collaboration.wait_agent:{"timeout_ms":10000}
09:function_call_output:{"message":"Wait completed.","timed_out":false}
10:agent_message
11:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><CWD></root></workspace_roots><permission_profile type="managed"><f...ntry></file_system></permission_profile></filesystem> [hash=e8c1de60307d0a3d]
      <subagents>
        <agent name="/root/worker" />
      </subagents>
    </environment_context>
